--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -449,55 +449,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Year\n",
-       "2006    Drama,Mystery,Sci-FiAction,Adventure,FantasyCr...\n",
-       "2007    Action,Adventure,FantasyCrime,Drama,ThrillerCo...\n",
-       "2008    Action,Crime,DramaComedy,Family,MusicalDrama,F...\n",
-       "2009    Adventure,Drama,WarAction,Adventure,FantasyAct...\n",
-       "2010    Action,Adventure,Sci-FiMystery,ThrillerComedy,...\n",
-       "2011    Action,Adventure,FantasyDramaAction,Adventure,...\n",
-       "2012    Adventure,Mystery,Sci-FiAction,Sci-FiAction,Th...\n",
-       "2013    Biography,Comedy,CrimeCrime,Drama,MysteryBiogr...\n",
-       "2014    Action,Adventure,Sci-FiAdventure,Drama,Sci-FiA...\n",
-       "2015    Action,Adventure,FantasyDrama,Romance,Thriller...\n",
-       "2016    Horror,ThrillerAnimation,Comedy,FamilyAction,A...\n",
-       "Name: Genre, dtype: object"
+       "Genre\n",
+       "Drama,Fantasy,War            2006\n",
+       "Crime,Drama,Music            2006\n",
+       "Crime,Drama,Fantasy          2006\n",
+       "Comedy,Romance,Sport         2006\n",
+       "Comedy,Horror,Sci-Fi         2006\n",
+       "                            ...  \n",
+       "Comedy                      52344\n",
+       "Drama,Romance               54352\n",
+       "Drama                       58386\n",
+       "Comedy,Drama,Romance        60368\n",
+       "Action,Adventure,Sci-Fi    100623\n",
+       "Name: Year, Length: 189, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies.groupby('Year')['Genre'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ax' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-b5baf0c0f9eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmovies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Year'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Genre'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhorizontalalignment\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'center'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverticalalignment\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'center'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransAxes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'ax' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "movies('Year', 'Genre', 'matplotlib', horizontalalignment='center', verticalalignment='center', transform=ax.transAxes)"
+    "movies.groupby('Genre')['Year'].sum().sort_values()"
    ]
   },
   {
@@ -750,6 +729,15 @@
    ],
    "source": [
     "movies.groupby('Year')['Income'].sum().plot(kind = 'bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what movie sold more\n"
    ]
   },
   {
