--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -499,11 +499,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Ridley Scott** has directed 8 movies on the list, followed by Michael Bay, **David Yates**, **Paul W.S. Anderson**, and **M. Night Shyamalan**, with 6 apiece."
+   ]
   },
   {
    "cell_type": "code",
@@ -534,6 +534,7 @@
     }
    ],
    "source": [
+    "# who are the popular directors\n",
     "directors = movies.groupby('Director')['Title'].count().sort_values(ascending=False)\n",
     "plt.figure(figsize=(20,5))\n",
     "directors[directors > 3].plot(kind='bar', colormap='Dark2')"
@@ -545,6 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#which movie had the best ratings\n",
     "movies_ratings = movies.groupby('Title')['Rating'].sum().sort_values(ascending=False)\n"
    ]
   },
