--- a/Chinaza Obiekwe Assignment.ipynb
+++ b/Chinaza Obiekwe Assignment.ipynb
@@ -499,6 +499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There seems to be a linear increase in the amount of movies produced in each passing year, with the exception of 2016 which had an exponential increase from the previous year's."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
