Update Chinaza Obiekwe NYC Assignment.ipynb

--- a/Chinaza Obiekwe NYC Assignment.ipynb
+++ b/Chinaza Obiekwe NYC Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
        "[38016 rows x 171 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
        "Length: 171, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "Name: SALE PRICE, Length: 171, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,17 +1315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Train Test Split\n",
     "from sklearn.model_selection import train_test_split"
@@ -1333,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,44 +1334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scale data\n",
-    "#from sklearn.preprocessing import StandardScaler"
+    "#use Linear Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scaler = StandardScaler()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scaled_X_train = scaler.fit_transform(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scaled_X_test = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1370,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1505,7 @@
        "25234       76000.0    -5.263039e+05"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1534,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1564,7 @@
        "       1083639.92367672,  514381.79968564, 1160172.42000773])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1611,7 @@
        "1205365.040660674"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1631,7 @@
        "9306308.575773748"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
