--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2161,13 +2161,12 @@
     "from sklearn.svm import SVC\n",
     "classifier = SVC(kernel = 'rbf', random_state = 0)\n",
     "theModel5 =classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n",
-    "y_pred = classifier.predict(TestData)"
+    "# Predicting the Test set results \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2176,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2251,7 @@
        "4    15595937       0"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2264,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,29 +2272,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "classifier = GaussianNB()\n",
-    "classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n",
-    "y_pred = classifier.predict(TestData)"
+    "theModel6 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "# Predicting the Test set results "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_prediction5 = theModel5.predict(TestData)"
+    "target_prediction5 = theModel6.predict(TestData)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -2351,7 +2349,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>15582591</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2367,11 +2365,11 @@
        "0    15642544       0\n",
        "1    15779492       0\n",
        "2    15815271       0\n",
-       "3    15582591       0\n",
+       "3    15582591       1\n",
        "4    15595937       0"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2383,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2392,29 +2390,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "classifier = KNeighborsClassifier()\n",
-    "classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n",
-    "y_pred = classifier.predict(TestData)"
+    "theModel7 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "# Predicting the Test set results "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_prediction5 = theModel5.predict(TestData)"
+    "target_prediction5 = theModel7.predict(TestData)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2423,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2487,7 @@
        "4    15595937       0"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,27 +2508,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 408,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-358-753b0682422a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheFeatures_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheTarget_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Predicting the Test set results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTestData\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
     "classifier = XGBClassifier()\n",
-    "classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n",
-    "y_pred = classifier.predict(TestData)"
+    "theModel9 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "# Predicting the Test set results \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_prediction6 = theModel9.predict(TestData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15642544</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15779492</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15815271</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15582591</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15595937</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerId  Exited\n",
+       "0    15642544       0\n",
+       "1    15779492       1\n",
+       "2    15815271       1\n",
+       "3    15582591       0\n",
+       "4    15595937       0"
+      ]
+     },
+     "execution_count": 411,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Result6 = pd.DataFrame(dic6)\n",
+    "Result6.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Result6.to_csv('result10.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb\n",
+    "classifier = lgb.LGBMClassifier()\n",
+    "theModel8 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "# Predicting the Test set results "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_prediction5 = theModel8.predict(TestData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15642544</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15779492</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15815271</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15582591</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15595937</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerId  Exited\n",
+       "0    15642544       0\n",
+       "1    15779492       1\n",
+       "2    15815271       1\n",
+       "3    15582591       0\n",
+       "4    15595937       0"
+      ]
+     },
+     "execution_count": 397,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Result6 = pd.DataFrame(dic6)\n",
+    "Result6.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Result6.to_csv('result9.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#conda install -c conda-forge lightgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#conda install -c conda-forge xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier =  LogisticRegression(solver=\"liblinear\")\n",
+    "theModel10 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "target_prediction7 = theModel10.predict(TestData)\n",
+    "dic7 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction7}\n",
+    "Result6 = pd.DataFrame(dic7)\n",
+    "Result6.head()\n",
+    "Result6.to_csv('result11.csv', index=False)"
    ]
   },
   {
