--- a/Hackathon.ipynb
+++ b/Hackathon.ipynb
@@ -2406,6 +2406,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from catboost import CatBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier =  CatBoostClassifier(random_state = 12345, verbose = False)\n",
+    "theModel10 = classifier.fit(theFeatures_train, theTarget_train)\n",
+    "target_prediction7 = theModel10.predict(TestData)\n",
+    "# classifier.score(theTarget_test, target_prediction7)\n",
+    "dic7 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction7}\n",
+    "Result6 = pd.DataFrame(dic7)\n",
+    "Result6.head()\n",
+    "Result6.to_csv('result13.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
