--- a/Hackathon.ipynb
+++ b/Hackathon.ipynb
@@ -1517,7 +1517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_pred = regressor.predict(X_test)\n",
+    "Y_pred = regressor.predict(X_test\n",
     "# regressor.score(X_train, Y_train)"
    ]
   },
@@ -1743,9 +1743,7 @@
     }
    ],
    "source": [
-    "theFeatures_train\n",
-    "\n",
-    "theTarget_train"
+    "theFeatures_train\n"
    ]
   },
   {
@@ -1980,361 +1978,6 @@
    "outputs": [],
    "source": [
     "Result5.to_csv('result5.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting Kernel SVM to the Training set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from sklearn.svm import SVC\n",
-    "classifier = SVC(kernel = 'rbf', random_state = 0)\n",
-    "theModel5 =classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_prediction5 = theModel5.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction5}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6 = pd.DataFrame(dic6)\n",
-    "Result6.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6.to_csv('result6.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "classifier = GaussianNB()\n",
-    "theModel6 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_prediction5 = theModel6.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction5}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6 = pd.DataFrame(dic6)\n",
-    "Result6.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6.to_csv('result7.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting the KNeighborsClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "classifier = KNeighborsClassifier()\n",
-    "theModel7 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_prediction5 = theModel7.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction5}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6 = pd.DataFrame(dic6)\n",
-    "Result6.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6.to_csv('result8.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting the XGBClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from xgboost import XGBClassifier\n",
-    "classifier = XGBClassifier()\n",
-    "theModel9 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_prediction6 = theModel9.predict(X_test)\n",
-    "# # classifier.score(theTarget_test, target_prediction6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction6}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6 = pd.DataFrame(dic6)\n",
-    "Result6.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6.to_csv('result10.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting the LGB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import lightgbm as lgb\n",
-    "classifier = lgb.LGBMClassifier()\n",
-    "theModel8 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "# Predicting the Test set results "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_prediction5 = theModel8.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic6 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction5}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6 = pd.DataFrame(dic6)\n",
-    "Result6.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Result6.to_csv('result9.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#conda install -c conda-forge lightgbm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#conda install -c conda-forge xgboost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting the LogisticRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "classifier =  LogisticRegression(solver=\"liblinear\")\n",
-    "theModel10 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "target_prediction7 = theModel10.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction7)\n",
-    "dic7 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction7}\n",
-    "Result6 = pd.DataFrame(dic7)\n",
-    "Result6.head()\n",
-    "Result6.to_csv('result11.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fitting the CatBoostClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from catboost import CatBoostClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classifier =  CatBoostClassifier(random_state = 12345, verbose = False)\n",
-    "theModel10 = classifier.fit(theFeatures_train, theTarget_train)\n",
-    "target_prediction7 = theModel10.predict(X_test)\n",
-    "# classifier.score(theTarget_test, target_prediction7)\n",
-    "dic7 = {'CustomerId' : dataset2['CustomerId'], 'Exited' :target_prediction7}\n",
-    "Result6 = pd.DataFrame(dic7)\n",
-    "Result6.head()\n",
-    "Result6.to_csv('result13.csv', index=False)"
    ]
   },
   {
