--- a/Naza Hackathon.ipynb
+++ b/Naza Hackathon.ipynb
@@ -439,6 +439,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## categorical columns are Geography and Gender\n",
+    "### We convert categorical data into numerical data using one-hot encoding scheme. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 244,
    "metadata": {},
@@ -1076,6 +1084,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Balance, Estimated Salary, and Age have Outliers\n",
+    "#### An outlier is an object that deviates significantly from the rest of the objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Checking to see if Gender has any effect on whether a customer exists or not."
    ]
   },
@@ -1389,7 +1405,7 @@
    "metadata": {},
    "source": [
     "### The strongest positive correlations with the target features are: EstimatedSalary, Balance, Age .\n",
-    "### The strongest negative correlations with the target features are: IsActiveMember, NumOfProducts, Tenure, HasCrCard *, and *CreditScore . "
+    "### The strongest negative correlations with the target features are: IsActiveMember, NumOfProducts, Tenure, HasCrCard , and CreditScore . "
    ]
   },
   {
@@ -11902,6 +11918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Gradient Boosting\n",
     "### Gradient boosting is a technique used in creating models for prediction"
    ]
   },
